--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,11 @@
-test_00: test_01 test_02
+test_00: test_01 test_02 test_03
 
 test_01:
 	@bash tests/test_01.sh
 
 test_02:
+	@rm -rf 02/*.status
 	@bash tests/test_02.sh
+
+test_03:
+	@bash tests/test_03.sh
