--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-test_00: test_01 test_02 test_03
+test_00: test_01 test_02 test_03 test_04
 
 test_01:
 	@bash tests/test_01.sh
@@ -9,3 +9,6 @@ test_02:
 
 test_03:
 	@bash tests/test_03.sh
+
+test_04:
+	@bash tests/test_04.sh
