--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
-test_00: test_01 test_02 test_03 test_04
+test_00: test_01 test_02 test_03 test_04 test_05
+	@echo -e "\e[47;30mALL TESTS COMPLETED\e[0m"
 
 test_01:
 	@bash tests/test_01.sh
@@ -12,3 +13,6 @@ test_03:
 
 test_04:
 	@bash tests/test_04.sh
+
+test_05:
+	@bash tests/test_05.sh
